Aritcles on mobile height fixed

--- a/src/index.css
+++ b/src/index.css
@@ -239,7 +239,7 @@ html {
 .article {
   background-color: var(--theme-grey);
   padding: 1vh 5vw;
-  height: 20vh;
+  /* height: 20vh; */
   color: white;
   text-align: left;
   border-radius: 20px;
